update: service tests